[package]
name = "ransid"
version = "0.1.0"
authors = ["Russell Mackenzie <russmackdev@gmail.com>"]
description = "ANSI colour and styling for terminal text."
documentation = "https://github.com/russmack/ransid"
homepage = "https://github.com/russmack/ransid"
repository = "https://github.com/russmack/ransid.git"
readme = "README.md"
keywords = ["ansi", "commandline", "terminal", "colour"]
license-file = "LICENSE.txt"

[dependencies]

[lib]
name = "ransid"

